--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,24 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 11:34]
+#+CAPTION: Clock summary at [2019-05-10 Fri 13:39]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *28:28* |       |      | 100.0 |
+| *Total time*                                               | *29:21* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 28:28   |       |      | 100.0 |
-| Active                                                     |         | 28:28 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |   9.4 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   7.7 |
-| Sprint and product backlog grooming                        |         |       | 0:45 |   2.6 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   1.8 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   1.3 |
-| Create namespaces for model elements                       |         |       | 8:59 |  31.6 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   5.4 |
-| Try to add relational tracing support                      |         |       | 2:51 |  10.0 |
-| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.9 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  25.4 |
+| Stories                                                    | 29:21   |       |      | 100.0 |
+| Active                                                     |         | 29:21 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |   9.1 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   7.4 |
+| Sprint and product backlog grooming                        |         |       | 0:55 |   3.1 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   1.7 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   1.2 |
+| Create namespaces for model elements                       |         |       | 8:59 |  30.6 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   5.3 |
+| Try to add relational tracing support                      |         |       | 2:51 |   9.7 |
+| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.7 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  24.6 |
+| Replace JSON based feature templates with generated code   |         |       | 0:43 |   2.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -402,6 +403,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 13:27]--[2019-05-10 Fri 13:39] =>  0:12
     CLOCK: [2019-05-10 Fri 12:55]--[2019-05-10 Fri 13:26] =>  0:31
     :END:
 
