--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 14:20]
+#+CAPTION: Clock summary at [2019-05-10 Fri 14:46]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *30:00* |       |      | 100.0 |
+| *Total time*                                               | *30:25* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 30:00   |       |      | 100.0 |
-| Active                                                     |         | 30:00 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |   8.9 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   7.3 |
-| Sprint and product backlog grooming                        |         |       | 0:55 |   3.1 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   1.7 |
+| Stories                                                    | 30:25   |       |      | 100.0 |
+| Active                                                     |         | 30:25 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |   8.8 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   7.2 |
+| Sprint and product backlog grooming                        |         |       | 0:55 |   3.0 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   1.6 |
 | Inner modules need to be qualified                         |         |       | 0:22 |   1.2 |
-| Create namespaces for model elements                       |         |       | 8:59 |  29.9 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   5.2 |
-| Try to add relational tracing support                      |         |       | 2:51 |   9.5 |
-| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.6 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  24.1 |
-| Replace JSON based feature templates with generated code   |         |       | 1:22 |   4.6 |
+| Create namespaces for model elements                       |         |       | 8:59 |  29.5 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   5.1 |
+| Try to add relational tracing support                      |         |       | 2:51 |   9.4 |
+| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.5 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  23.7 |
+| Replace JSON based feature templates with generated code   |         |       | 1:47 |   5.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -403,6 +403,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 14:21]--[2019-05-10 Fri 14:46] =>  0:25
     CLOCK: [2019-05-10 Fri 14:06]--[2019-05-10 Fri 14:20] =>  0:14
     CLOCK: [2019-05-10 Fri 13:40]--[2019-05-10 Fri 14:05] =>  0:25
     CLOCK: [2019-05-10 Fri 13:27]--[2019-05-10 Fri 13:39] =>  0:12
