--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 16:09]
+#+CAPTION: Clock summary at [2019-05-10 Fri 16:34]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *31:45* |       |      | 100.0 |
+| *Total time*                                               | *32:09* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 31:45   |       |      | 100.0 |
-| Active                                                     |         | 31:45 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |   8.5 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.9 |
+| Stories                                                    | 32:09   |       |      | 100.0 |
+| Active                                                     |         | 32:09 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |   8.3 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.8 |
 | Sprint and product backlog grooming                        |         |       | 0:55 |   2.9 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   1.6 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   1.2 |
-| Create namespaces for model elements                       |         |       | 8:59 |  28.3 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.9 |
-| Try to add relational tracing support                      |         |       | 2:51 |   9.0 |
-| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.4 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  22.7 |
-| Replace JSON based feature templates with generated code   |         |       | 3:07 |   9.8 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   1.1 |
+| Create namespaces for model elements                       |         |       | 8:59 |  27.9 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.8 |
+| Try to add relational tracing support                      |         |       | 2:51 |   8.9 |
+| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.3 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  22.4 |
+| Replace JSON based feature templates with generated code   |         |       | 3:31 |  10.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -403,6 +403,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 16:10]--[2019-05-10 Fri 16:34] =>  0:24
     CLOCK: [2019-05-10 Fri 15:23]--[2019-05-10 Fri 16:09] =>  0:46
     CLOCK: [2019-05-10 Fri 15:08]--[2019-05-10 Fri 15:22] =>  0:14
     CLOCK: [2019-05-10 Fri 14:47]--[2019-05-10 Fri 15:07] =>  0:20
