--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 17:32]
+#+CAPTION: Clock summary at [2019-05-10 Fri 17:46]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *33:05* |       |      | 100.0 |
+| *Total time*                                               | *33:19* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 33:05   |       |      | 100.0 |
-| Active                                                     |         | 33:05 |      | 100.0 |
+| Stories                                                    | 33:19   |       |      | 100.0 |
+| Active                                                     |         | 33:19 |      | 100.0 |
 | Edit release notes for previous sprint                     |         |       | 2:41 |   8.1 |
 | Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.6 |
 | Sprint and product backlog grooming                        |         |       | 0:55 |   2.8 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   1.5 |
 | Inner modules need to be qualified                         |         |       | 0:22 |   1.1 |
-| Create namespaces for model elements                       |         |       | 8:59 |  27.2 |
+| Create namespaces for model elements                       |         |       | 8:59 |  27.0 |
 | Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.7 |
 | Try to add relational tracing support                      |         |       | 2:51 |   8.6 |
 | Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.2 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  21.8 |
-| Replace JSON based feature templates with generated code   |         |       | 4:27 |  13.5 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  21.7 |
+| Replace JSON based feature templates with generated code   |         |       | 4:41 |  14.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -403,6 +403,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 17:32]--[2019-05-10 Fri 17:46] =>  0:14
     CLOCK: [2019-05-10 Fri 16:35]--[2019-05-10 Fri 17:31] =>  0:56
     CLOCK: [2019-05-10 Fri 16:10]--[2019-05-10 Fri 16:34] =>  0:24
     CLOCK: [2019-05-10 Fri 15:23]--[2019-05-10 Fri 16:09] =>  0:46
