--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 18:58]
+#+CAPTION: Clock summary at [2019-05-10 Fri 19:05]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *34:29* |       |      | 100.0 |
+| *Total time*                                               | *34:35* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 34:29   |       |      | 100.0 |
-| Active                                                     |         | 34:29 |      | 100.0 |
+| Stories                                                    | 34:35   |       |      | 100.0 |
+| Active                                                     |         | 34:35 |      | 100.0 |
 | Edit release notes for previous sprint                     |         |       | 2:41 |   7.8 |
 | Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.3 |
 | Sprint and product backlog grooming                        |         |       | 0:55 |   2.7 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   1.4 |
 | Inner modules need to be qualified                         |         |       | 0:22 |   1.1 |
-| Create namespaces for model elements                       |         |       | 8:59 |  26.1 |
+| Create namespaces for model elements                       |         |       | 8:59 |  26.0 |
 | Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.5 |
-| Try to add relational tracing support                      |         |       | 2:51 |   8.3 |
+| Try to add relational tracing support                      |         |       | 2:51 |   8.2 |
 | Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.0 |
 | Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  20.9 |
-| Replace JSON based feature templates with generated code   |         |       | 5:51 |  17.0 |
+| Replace JSON based feature templates with generated code   |         |       | 5:57 |  17.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -403,6 +403,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 18:59]--[2019-05-10 Fri 19:05] =>  0:06
     CLOCK: [2019-05-10 Fri 18:28]--[2019-05-10 Fri 18:58] =>  0:30
     CLOCK: [2019-05-10 Fri 17:47]--[2019-05-10 Fri 18:27] =>  0:40
     CLOCK: [2019-05-10 Fri 17:32]--[2019-05-10 Fri 17:46] =>  0:14
