--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,25 +12,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 20:05]
+#+CAPTION: Clock summary at [2019-05-10 Fri 20:16]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *34:49* |       |      | 100.0 |
+| *Total time*                                               | *34:59* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 34:49   |       |      | 100.0 |
-| Active                                                     |         | 34:49 |      | 100.0 |
+| Stories                                                    | 34:59   |       |      | 100.0 |
+| Active                                                     |         | 34:59 |      | 100.0 |
 | Edit release notes for previous sprint                     |         |       | 2:41 |   7.7 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.3 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.2 |
 | Sprint and product backlog grooming                        |         |       | 0:55 |   2.6 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   1.4 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   1.1 |
-| Create namespaces for model elements                       |         |       | 8:59 |  25.8 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.5 |
-| Try to add relational tracing support                      |         |       | 2:51 |   8.2 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   1.0 |
+| Create namespaces for model elements                       |         |       | 8:59 |  25.7 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.4 |
+| Try to add relational tracing support                      |         |       | 2:51 |   8.1 |
 | Linux and OSX binaries are not stripped                    |         |       | 1:23 |   4.0 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  20.7 |
-| Replace JSON based feature templates with generated code   |         |       | 6:11 |  17.8 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  20.6 |
+| Replace JSON based feature templates with generated code   |         |       | 6:21 |  18.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -403,6 +403,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 20:06]--[2019-05-10 Fri 20:16] =>  0:10
     CLOCK: [2019-05-10 Fri 19:51]--[2019-05-10 Fri 20:05] =>  0:14
     CLOCK: [2019-05-10 Fri 18:59]--[2019-05-10 Fri 19:05] =>  0:06
     CLOCK: [2019-05-10 Fri 18:28]--[2019-05-10 Fri 18:58] =>  0:30
