--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,24 +12,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-10 Fri 20:41]
+#+CAPTION: Clock summary at [2019-05-10 Fri 20:48]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *35:22* |       |      | 100.0 |
+| *Total time*                                               | *35:28* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 35:22   |       |      | 100.0 |
-| Active                                                     |         | 35:22 |      | 100.0 |
+| Stories                                                    | 35:28   |       |      | 100.0 |
+| Active                                                     |         | 35:28 |      | 100.0 |
 | Edit release notes for previous sprint                     |         |       | 2:41 |   7.6 |
 | Create a video demo for the previous sprint's features     |         |       | 2:11 |   6.2 |
-| Sprint and product backlog grooming                        |         |       | 0:55 |   2.6 |
+| Sprint and product backlog grooming                        |         |       | 1:01 |   2.9 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   1.4 |
 | Inner modules need to be qualified                         |         |       | 0:22 |   1.0 |
-| Create namespaces for model elements                       |         |       | 8:59 |  25.4 |
+| Create namespaces for model elements                       |         |       | 8:59 |  25.3 |
 | Leaves in internal modules are not captured correctly      |         |       | 1:33 |   4.4 |
-| Try to add relational tracing support                      |         |       | 2:51 |   8.1 |
+| Try to add relational tracing support                      |         |       | 2:51 |   8.0 |
 | Linux and OSX binaries are not stripped                    |         |       | 1:23 |   3.9 |
-| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  20.4 |
+| Initial analysis to code generate feature infrastructure   |         |       | 7:13 |  20.3 |
 | Replace JSON based feature templates with generated code   |         |       | 6:44 |  19.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -169,6 +169,7 @@ Time spent creating the demo.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 20:42]--[2019-05-10 Fri 20:48] =>  0:06
     CLOCK: [2019-05-10 Fri 11:35]--[2019-05-10 Fri 11:45] =>  0:10
     CLOCK: [2019-05-10 Fri 11:17]--[2019-05-10 Fri 11:34] =>  0:17
     CLOCK: [2019-05-09 Thu 06:25]--[2019-05-09 Thu 06:34] =>  0:09
